# beanborg

./: .envrc  .gitignore  LICENSE  README.md  bb-clean.py  bb-import.py  bb-mover.py  bb_clean.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup.py  tox.ini
beanborg/: arg_parser.py  bb-clean.py  bb-import.py  bb-mover.py  bb_archive.py  bb_clean.py  bb_import.py  bb_mover.py  config.py  importer.py  test.py
beanborg/classification/: classifier.py  classifier_gpt.py  custom_fuzzy_wordf_completer.py  data_loader.py  gpt_service.py  model_builder.py  transaction_model.py  ui_service.py
beanborg/classification/prompts/: system.txt
beanborg/handlers/: amount_handler.py
beanborg/model/: transactions.py
beanborg/rule_engine/: Context.py  decision_tables.py  rules.py  rules_engine.py
beanborg/tmp/: arg_parser.py
beanborg/utils/: duplicate_detector.py  hash_utils.py  input.py  journal_utils.py  string_utils.py
rule_engine/: Context.py  decision_tables.py  rules.py  rules_engine.py
tests/: test_config.py  test_currency_handler.py  test_decision_tables.py  test_duplicate_detector.py  test_rules_engine.py
tests/files/: 1234.ldg  My_Custom_Rule.py  _1234.ldg  account.rules  amount_handler.yaml  asset.rules  bank1.yaml  bank1_custom_rule.yaml  bank1_ignore_at_pos.yaml  bank1_ignore_by_counterparty.yaml  bank1_ignore_contains_string_at_pos.yaml  bank1_replace_asset.yaml  bank1_replace_counterparty.yaml  bank1_replace_expense.yaml  bank1_replace_expense2.yaml  payee.rules  payee_with_comments.rules  testbank_account.rules  testbank_asset.rules  testbank_custom.rules  testbank_ignore.rules  testbank_ignore_at_pos.rules  testbank_payee.rules
tutorial/: README.md  accounts.ldg  main.ldg
tutorial/myrules/: asset.rules  bank1.rules
tutorial/test-data/: eagle-bank-statement.csv
