[metadata]
name = beanborg
url = https://github.com/luciano-fiandesio/beanborg
author = Luciano Fiandesio
author_email = luciano@fiandes.io
description = Beanborg automatically imports financial transactions from external CSV files into the Beancount bookkeeping system.

[options]
include_package_data = True
packages =
    beanborg
install_requires =
    beancount==2.3.3
    pyyaml==5.4.1
