[metadata]
name = beanborg
url = https://github.com/luciano-fiandesio/beanborg
author = Luciano Fiandesio
author_email = luciano@fiandes.io
description = Beanborg automatically imports financial transactions from external CSV files into the Beancount bookkeeping system.

[options]
include_package_data = True
packages =
    beanborg
install_requires =
    beancount>=2.3.3
    pyyaml==5.4.1
    rich==12.4.4
    prompt-toolkit==3.0.30s
[options.entry_points]
console_scripts =
    bb_mover = beanborg:bb_mover.main
    bb_archive = beanborg:bb_archive.main
    bb_import = beanborg:bb_import.main
