[metadata]
name = beanborg
url = https://github.com/luciano-fiandesio/beanborg
author = Luciano Fiandesio
author_email = luciano@fiandes.io
description = Beanborg automatically imports financial transactions from external CSV files into the Beancount bookkeeping system.

[options]
include_package_data = True
packages =
    beanborg
install_requires =
    beancount>=2.3.5
    pandas==1.5.2
    pyyaml==6.0
    rich==13.0.1
    prompt_toolkit==3.0.36
    textblob==0.17.1
[options.entry_points]
console_scripts =
    bb_mover = beanborg:bb_mover.main
    bb_archive = beanborg:bb_archive.main
    bb_import = beanborg:bb_import.main
